--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,6 @@
   font-family: "arial-rounded";
   src: url(../fonts/Arial_Rounded_MT.ttf) format("truetype");
 }
-html {
-  box-sizing: border-box;
-}
 
 body {
   font-family: nirmala, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -44,12 +41,21 @@ header {
   margin: 0 auto;
   padding: 10px 10px;
 }
+.header-bottom {
+  width: 100%;
+  background-color: white;
+  border-bottom: solid 2px #2b63a4;
+}
+
 .logo-header {
   color: white;
   font-size: 2em;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
+}
+.shopping-cart {
+  margin-right: 10px;
 }
 nav {
   display: none;
@@ -63,7 +69,7 @@ nav a {
   color: white;
   display: block;
   font-size: 1.2em;
-  padding: 15px 30px;
+  padding: 30px 15px;
   border-top: white solid 2px;
 }
 #hamburger-menu {
@@ -72,14 +78,47 @@ nav a {
 #hamburger-menu:checked ~ nav {
   display: block;
 }
-
+.search-icon {
+  color: white;
+  position: fixed;
+  top: 10px;
+  right: 50px;
+}
+.search {
+  display: none;
+  position: fixed;
+  right: 20px;
+  top: 62px;
+}
+#search-icon {
+  display: none;
+}
+#search-icon:checked ~ .search {
+  display: block;
+}
+.search-box {
+  border: solid 2px #2b63a4;
+  padding: 3px 0px;
+}
+.search-button {
+  border: none;
+  color: white;
+  background-color: #2b63a4;
+  font-family: nirmala, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1em;
+  padding-bottom: 4px;
+}
+.search-button:hover {
+  color: #2b63a4;
+  background-color: white;
+  border: solid 1px #2b63a4;
+  padding: 0px 3px 4px 3px;
+}
 .social-media {
   max-width: 100%;
   display: flex;
   gap: 15px;
   padding: 5px;
-  background-color: white;
-  border-bottom: solid 2px #2b63a4;
   justify-content: center;
 }
 .social-media a {
@@ -89,7 +128,7 @@ nav a {
 .social-media h1 {
   margin: auto 0px;
   color: #2b63a4;
-  font-size: 2em;
+  font-size: 1.5em;
   margin-right: 15px;
 }
 footer {
@@ -114,6 +153,11 @@ a {
   padding: 5px 10px;
   border-radius: 5px;
   text-transform: uppercase;
+}
+.cta:hover {
+  border: solid #148387 1px;
+  background-color: white;
+  color: #148387;
 }
 .facebook {
   height: 28px;
@@ -142,10 +186,9 @@ a {
   font-family: arial-rounded, Verdana, Geneva, Tahoma, sans-serif;
   margin: 10px 0px 25px 0px;
   color: #2b63a4;
-}
-.intro p {
   font-size: 1.2em;
 }
+
 .featured,
 .waterproof {
   max-width: 1000px;
@@ -159,14 +202,17 @@ a {
 .featured__img {
   max-width: 100%;
 }
+.featured h2,
+.featured p {
+  color: black;
+}
 .featured h2 {
   margin-bottom: 5px;
-  color: black;
+  text-transform: capitalize;
 }
 .featured p {
   text-align: left;
   margin: 0;
-  color: black;
   font-weight: bold;
 }
 .waterproof {
@@ -179,6 +225,7 @@ a {
 .waterproof h2 {
   order: 1;
   color: #2b63a4;
+  text-decoration: underline;
 }
 
 .waterproof__img {
@@ -197,7 +244,7 @@ a {
 .waterproof__waterproof {
   color: #2b63a4;
   text-transform: uppercase;
-  font-weight: bold;
+  font-weight: bolder;
 }
 
 @media (min-width: 400px) {
@@ -206,9 +253,6 @@ a {
   }
 }
 @media (min-width: 800px) {
-  header {
-    position: static;
-  }
   .cta {
     font-size: 1.2em;
     padding: 5px 20px;
@@ -252,6 +296,9 @@ a {
   }
 }
 @media (min-width: 1200px) {
+  header {
+    position: static;
+  }
   header label {
     display: none;
   }
@@ -269,6 +316,14 @@ a {
     font-size: 1.3em;
     padding: 15px;
     border-top: none;
+  }
+  .search {
+    display: block;
+    position: absolute;
+  }
+  .social-media {
+    justify-content: left;
+    margin-left: 20px;
   }
   .intro__content {
     left: 30%;
