--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ nav {
   display: none;
   position: fixed;
   left: 0px;
-  top: 52px;
+  top: 45px;
   background-color: #2b63a4;
   border-bottom: white solid 2px;
 }
@@ -71,7 +71,7 @@ nav a {
   color: white;
   display: block;
   font-size: 1.2em;
-  padding: 30px 15px;
+  padding: 30px 25px;
   border-top: white solid 2px;
 }
 #hamburger-menu {
@@ -89,8 +89,10 @@ nav a {
 .search {
   display: none;
   position: fixed;
-  right: 20px;
-  top: 62px;
+  right: 5px;
+  top: 50px;
+  background-color: #e6ebf3;
+  padding: 5px 5px;
 }
 #search-icon {
   display: none;
@@ -185,9 +187,9 @@ a {
 }
 
 .intro p {
-  font-family: arial-rounded, Verdana, Geneva, Tahoma, sans-serif;
-  margin: 10px 0px 25px 0px;
-  color: #2b63a4;
+  font-family: nirmala, Verdana, Geneva, Tahoma, sans-serif;
+  margin: 0px 0px 25px 0px;
+  color: #211d99;
   font-size: 1.2em;
 }
 
@@ -329,6 +331,9 @@ a {
   .search {
     display: block;
     position: absolute;
+    right: 20px;
+    top: 62px;
+    padding: 0px;
   }
   .shopping-cart {
     margin-right: 10px;
