--- a/css/styles.css
+++ b/css/styles.css
@@ -74,10 +74,12 @@ nav a {
   padding: 30px 25px;
   border-top: white solid 2px;
 }
-#hamburger-menu {
+#hamburger-menu,
+#search-icon {
   display: none;
 }
-#hamburger-menu:checked ~ nav {
+#hamburger-menu:checked ~ nav,
+#search-icon:checked ~ .search {
   display: block;
 }
 .search-icon {
@@ -94,12 +96,7 @@ nav a {
   background-color: #e6ebf3;
   padding: 5px 5px;
 }
-#search-icon {
-  display: none;
-}
-#search-icon:checked ~ .search {
-  display: block;
-}
+
 .search-box {
   border: solid 2px #2b63a4;
   padding: 3px 0px;
@@ -195,13 +192,10 @@ a {
 
 .featured,
 .waterproof {
-  max-width: 1000px;
-  margin: 20px 50px;
-}
-.featured {
-  text-align: center;
   max-width: 330px;
+  margin: 20px 50px;
   margin: 0 auto;
+  text-align: center;
 }
 .featured__img {
   max-width: 100%;
@@ -222,9 +216,6 @@ a {
 .waterproof {
   display: flex;
   flex-direction: column;
-  text-align: center;
-  margin: 0 auto;
-  max-width: 330px;
 }
 .waterproof h2 {
   order: 1;
@@ -235,7 +226,6 @@ a {
 .waterproof__img {
   order: 2;
   max-width: 100%;
-  margin: auto;
   border-radius: 10%;
 }
 .waterproof p {
@@ -245,7 +235,7 @@ a {
   order: 4;
   align-self: center;
 }
-.waterproof__waterproof {
+.waterproof__bold-text {
   color: #2b63a4;
   text-transform: uppercase;
   font-weight: bolder;
@@ -263,20 +253,12 @@ a {
   }
 
   .intro {
-    position: relative;
-    top: -10px;
     background-image: url(../images/free-shipping-big.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
     background-position-y: center;
     min-height: 70vh;
   }
   .intro__content {
-    position: relative;
-    text-align: center;
-    left: 35%;
     top: 18vh;
-    margin: 10px;
   }
   .intro p {
     font-size: 1.5em;
@@ -284,7 +266,7 @@ a {
   .home-featured {
     display: flex;
     max-height: 600px;
-    max-width: 1000px;
+    max-width: 1400px;
     margin: 10px auto;
   }
   .featured,
@@ -341,8 +323,5 @@ a {
   .social-media {
     justify-content: left;
     margin-left: 20px;
-  }
-  .intro__content {
-    left: 30%;
   }
 }
