--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+@import "imports/variables.css";
+
 @font-face {
   font-family: "nirmala";
   src: url(../fonts/nirmala.ttf) format("truetype");
@@ -11,6 +13,7 @@ body {
   font-family: var(--font-paragraph), "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   background-color: #e6ebf3;
   margin: 0;
+  min-height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr auto;
 }
@@ -18,25 +21,26 @@ h1,
 h2 {
   font-family: var(--font-heading), Verdana, Geneva, Tahoma, sans-serif;
   font-size: 1.6em;
+  text-transform: capitalize;
 }
 .logo {
   font-family: bebas Neue, Verdana, Geneva, Tahoma, sans-serif;
   font-size: 2.5em;
-  color: var(--color-header__footer);
-}
-.search-button:hover,
-.social-media > * {
-  color: var(--color-header__footer);
 }
 header,
 footer,
-.logo-header,
-.shopping-cart,
-nav a,
-.search-icon,
+i,
+a,
 .search-button,
 .cta {
   color: #fff;
+}
+h1,
+h2,
+.h1 i,
+.social-media i,
+.search-button:hover {
+  color: var(--color-header__footer);
 }
 header,
 footer,
@@ -50,6 +54,7 @@ nav,
 .cta:hover {
   background-color: #fff;
 }
+
 header,
 footer,
 .header-bottom,
@@ -62,6 +67,7 @@ footer {
   font-size: 1.2em;
   max-height: 66px;
 }
+/*header*/
 header {
   position: sticky;
   top: 0px;
@@ -77,6 +83,7 @@ header {
 .header-bottom {
   width: 100%;
   border-bottom: solid 2px var(--color-header__footer);
+  padding: 3px 0px;
 }
 .header-top i,
 .search-bar i {
@@ -103,11 +110,9 @@ nav a {
 }
 nav,
 nav a {
-  animation-name: show-nav;
+  animation: show-nav 0.5s forwards;
   transition-property: all;
   left: -100px;
-  animation-duration: 0.5s;
-  animation-fill-mode: forwards;
 }
 @keyframes show-nav {
   100% {
@@ -122,14 +127,16 @@ nav a {
 #search-icon:checked ~ .search {
   display: block;
 }
+.search,
 .search-icon {
   position: fixed;
+}
+.search-icon {
   top: 10px;
   right: 55px;
 }
 .search {
   display: none;
-  position: fixed;
   right: 5px;
   top: 50px;
   padding: 5px 5px;
@@ -140,7 +147,6 @@ nav a {
   padding: 4px 0px;
 }
 .search-button {
-  border: none;
   font-family: nirmala, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1em;
   padding-bottom: 4px;
@@ -148,20 +154,51 @@ nav a {
   transition: all ease-in 0.4s;
 }
 .social-media {
-  max-width: 100%;
   display: flex;
   gap: 15px;
   padding: 5px;
   justify-content: center;
 }
-.social-media a {
-  margin-top: 3px;
-}
-.social-media h1 {
+
+.social-media h2 {
   margin: auto 0px;
   font-size: 1.5em;
   margin-right: 15px;
 }
+.bold-text {
+  text-transform: uppercase;
+  font-weight: bolder;
+  color: var(--color-header__footer);
+}
+/*links*/
+
+.current {
+  text-decoration: underline;
+}
+a {
+  text-decoration: none;
+}
+.cta {
+  border: solid #148387 1px;
+  background-color: #148387;
+  min-width: 84px;
+  text-align: center;
+  font-size: 0.8em;
+  padding: 5px 10px;
+  border-radius: 5px;
+  text-transform: uppercase;
+  transition: all ease-in 0.4s;
+}
+.cta:hover {
+  color: #148387;
+  padding: 5px 9px;
+}
+.cta-form {
+  max-width: 200.65px;
+  padding: 5px 20px;
+  margin: 10px auto;
+}
+/*styles for main content*/
 .featured,
 .waterproof {
   max-width: 330px;
@@ -175,31 +212,102 @@ nav a {
 }
 .featured h2 {
   margin-bottom: 5px;
-  text-transform: capitalize;
 }
 .featured p {
   font-weight: bold;
   text-transform: uppercase;
   text-align: left;
 }
-/*links*/
-
-.current {
-  text-decoration: underline;
+.form {
+  display: flex;
+  gap: 5em;
 }
-a {
-  text-decoration: none;
+form p {
+  margin: 10px 0px;
+  font-size: 1.1em;
 }
-.cta {
-  border: solid #148387 1px;
-  background-color: #148387;
-  font-size: 0.8em;
-  padding: 5px 10px;
-  border-radius: 5px;
+form p,
+select {
+  font-weight: bold;
+  color: var(--color-header__footer);
+}
+select {
   text-transform: uppercase;
-  transition: all ease-in 0.4s;
+  border: 1px solid var(--color-header__footer);
+  background-color: #fafafa;
+  padding: 3px 5px;
+  font-family: var(--font-paragraph);
+  font-size: 1em;
+  border-radius: 5px;
 }
-.cta:hover {
-  color: #148387;
-  padding: 5px 9px;
+.content-square {
+  background-color: #fff;
+  border: solid 2px var(--color-header__footer);
+}
+.shoppingcart-content {
+  max-width: 400px;
+  padding: 17px 17px 0px 17px;
+}
+.shoppingcart-content__product {
+  display: flex;
+  gap: 10px;
+}
+.shoppingcart-content__product > * {
+  flex: 1;
+}
+.shoppingcart-content__product h2 {
+  margin-bottom: 0px;
+  color: black;
+}
+.shoppingcart-content__product h2,
+.shoppingcart-content__product p {
+  text-transform: uppercase;
+  font-size: 1.1em;
+  font-weight: bold;
+  margin-top: 0px;
+}
+.remove {
+  display: flex;
+  color: var(--color-header__footer);
+  gap: 30px;
+  margin-top: 15px;
+  font-weight: bold;
+  text-transform: capitalize;
+}
+.remove i {
+  font-size: 1.6em;
+  margin-top: 17px;
+}
+.shipment-info p {
+  margin-top: 0px;
+  text-decoration: underline;
+  font-weight: bold;
+}
+.cost {
+  margin-bottom: 20px;
+  border: solid 2px var(--color-header__footer);
+  padding: 0px 15px 30px 15px;
+  background-color: rgb(248, 247, 247);
+}
+.cost-info {
+  display: flex;
+  justify-content: space-between;
+  height: 40px;
+  padding-bottom: 3px;
+  border-bottom: solid 1px black;
+}
+.h1 {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+}
+.h1 i {
+  margin-top: 15px;
+}
+.checkout {
+  display: flex;
+  flex-direction: column;
+}
+.checkout > * {
+  flex: 1;
 }
