cleaned up my css

--- a/css/about.css
+++ b/css/about.css
@@ -6,7 +6,7 @@
 .about__content {
   max-width: 600px;
   margin: 50px auto;
-  padding: 0px 10px;
+  padding: 10px;
   animation: about__content 1s forwards;
   border: solid 2px var(--color-header__footer);
   opacity: 0;
@@ -23,10 +23,10 @@
   }
 }
 .about__content h1 {
-  margin: 3px;
+  margin: 5px;
 }
 
 .about__content p {
   color: var(--color-header__footer);
-  margin: 5px;
+  margin: 8px;
 }
