--- a/css/contact.css
+++ b/css/contact.css
@@ -1,18 +1,17 @@
-.heading {
+h1,
+h2 {
   text-align: center;
-  margin-bottom: 50px;
-}
-
-h1 {
-  margin: 2px;
-  font-size: 2.2em;
   text-decoration: underline;
-  margin-top: 20px;
+}
+h1 {
+  font-size: 2.2em;
+  margin-top: 20px 0px 0px 50px;
 }
 h2 {
   margin-bottom: 12px;
-  text-decoration: underline;
-  text-align: center;
+}
+.contact {
+  margin: auto;
 }
 
 .message,
@@ -20,15 +19,25 @@ h2 {
   max-width: 350px;
   margin: 20px auto;
 }
-form {
-  display: flex;
-  flex-direction: column;
-  font-weight: bold;
+form,
+.contact-info {
   color: var(--color-header__footer);
+  font-weight: bold;
+}
+form,
+.contact-info__content {
+  display: flex;
+}
+form {
+  flex-direction: column;
+}
+textarea,
+#email,
+.contact-info__content {
+  border: solid 2px var(--color-header__footer);
 }
 textarea,
 #email {
-  border: solid 2px var(--color-header__footer);
   padding: 5px;
   border-radius: 5px;
   margin: 10px 0px;
@@ -36,26 +45,19 @@ textarea,
 textarea {
   min-height: 75px;
 }
-.contact-info {
-  color: var(--color-header__footer);
-}
 .contact-info h3 {
   text-decoration: underline;
   text-transform: capitalize;
   font-family: var(--font-heading), Verdana, Geneva, Tahoma, sans-serif;
-  font-weight: bold;
   font-size: 1.4em;
   margin-bottom: 10px;
 }
 .contact-info__content {
-  display: flex;
   background-color: #fff;
-  border: solid 2px var(--color-header__footer);
   padding-left: 20px;
   border-radius: 5px;
 }
 .contact-info__content i {
   font-size: 1.4em;
-  margin-top: 16px;
-  margin-right: 8px;
+  margin: 16px 8px 0px 0px;
 }
