--- a/css/offpist.css
+++ b/css/offpist.css
@@ -1,27 +1,20 @@
-main {
-  padding: 20px;
+.product-specific,
+.product-image_thumbnails {
+  display: flex;
 }
 .product-specific {
-  position: relative;
   max-width: 1000px;
-  display: flex;
   flex-direction: column;
   margin: 40px auto;
-  padding-bottom: 45px;
+  padding: 20px 20px 45px 20px;
 }
 .product-specific > * {
   flex: 1;
 }
 .product-image_thumbnails {
-  display: flex;
   flex-direction: row;
   gap: 10px;
   margin-top: 5px;
-}
-
-li:before,
-select {
-  color: var(--color-header__footer);
 }
 .product-specific h1 {
   margin-bottom: 0px;
@@ -30,32 +23,31 @@ select {
 .product-specific ul {
   font-weight: bold;
 }
-
-ul {
-  text-transform: capitalize;
+.product-specific p {
+  margin: 8px 0px;
 }
 .price,
 select {
   text-transform: uppercase;
 }
 ul {
+  text-transform: capitalize;
   padding-left: 0px;
   list-style: none;
   margin: 15px 0px;
 }
-.product-specific p {
-  margin: 8px 0px;
+li:before,
+select {
+  color: var(--color-header__footer);
 }
 li:before {
   content: "\2022";
   margin-right: 7px;
 }
-
 #add-to-cart,
 .cart {
   display: none;
 }
-
 #add-to-cart:checked ~ .cart {
   display: block;
 }
@@ -69,7 +61,6 @@ li:before {
   text-align: center;
   padding: 0px 40px;
 }
-
 .cart h2 {
   margin: 45px auto;
 }
