--- a/css/purchase-complete.css
+++ b/css/purchase-complete.css
@@ -1,16 +1,26 @@
 main {
   margin: 40px auto;
 }
+.h1 {
+  font-size: 0.8em;
+  padding: 10px;
+}
 .checkout {
   max-width: 1200px;
+  display: flex;
+  flex-direction: column;
 }
+.checkout > * {
+  flex: 1;
+}
+
 .content-square {
   margin: 10px;
   padding: 15px;
 }
 .shoppingcart-content__product h2,
 .shoppingcart-content__product p {
-  margin-bottom: 3px;
+  margin-bottom: 4px;
   text-decoration: underline;
 }
 .shoppingcart-content__product p {
@@ -18,4 +28,9 @@ main {
 }
 .shipment-info {
   margin-top: 10px;
+}
+.reciet {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
