--- a/css/styles.css
+++ b/css/styles.css
@@ -37,8 +37,8 @@ a,
 }
 h1,
 h2,
-.h1 i,
 .social-media i,
+.blue-i,
 .search-button:hover {
   color: var(--color-header__footer);
 }
@@ -55,9 +55,6 @@ nav,
   background-color: #fff;
 }
 
-header,
-footer,
-.header-bottom,
 img {
   width: 100%;
 }
@@ -165,11 +162,6 @@ nav a {
   font-size: 1.5em;
   margin-right: 15px;
 }
-.bold-text {
-  text-transform: uppercase;
-  font-weight: bolder;
-  color: var(--color-header__footer);
-}
 /*links*/
 
 .current {
@@ -194,6 +186,7 @@ a {
   padding: 5px 9px;
 }
 .cta-form {
+  box-sizing: content-box;
   max-width: 200.65px;
   padding: 5px 20px;
   margin: 10px auto;
@@ -214,8 +207,6 @@ a {
   margin-bottom: 5px;
 }
 .featured p {
-  font-weight: bold;
-  text-transform: uppercase;
   text-align: left;
 }
 .form {
@@ -227,12 +218,17 @@ form p {
   font-size: 1.1em;
 }
 form p,
-select {
+select,
+.bold-text {
   font-weight: bold;
   color: var(--color-header__footer);
 }
+.featured p,
+.bold-text,
 select {
   text-transform: uppercase;
+}
+select {
   border: 1px solid var(--color-header__footer);
   background-color: #fafafa;
   padding: 3px 5px;
@@ -248,8 +244,12 @@ select {
   max-width: 400px;
   padding: 17px 17px 0px 17px;
 }
-.shoppingcart-content__product {
+.shoppingcart-content__product,
+.remove,
+.cost-info {
   display: flex;
+}
+.shoppingcart-content__product {
   gap: 10px;
 }
 .shoppingcart-content__product > * {
@@ -263,15 +263,18 @@ select {
 .shoppingcart-content__product p {
   text-transform: uppercase;
   font-size: 1.1em;
-  font-weight: bold;
   margin-top: 0px;
 }
+.shoppingcart-content__product h2,
+.shoppingcart-content__product p,
+.shipment-info p,
 .remove {
-  display: flex;
+  font-weight: bold;
+}
+.remove {
   color: var(--color-header__footer);
   gap: 30px;
   margin-top: 15px;
-  font-weight: bold;
   text-transform: capitalize;
 }
 .remove i {
@@ -281,7 +284,6 @@ select {
 .shipment-info p {
   margin-top: 0px;
   text-decoration: underline;
-  font-weight: bold;
 }
 .cost {
   margin-bottom: 20px;
@@ -290,7 +292,6 @@ select {
   background-color: rgb(248, 247, 247);
 }
 .cost-info {
-  display: flex;
   justify-content: space-between;
   height: 40px;
   padding-bottom: 3px;
@@ -303,11 +304,5 @@ select {
 }
 .h1 i {
   margin-top: 15px;
-}
-.checkout {
-  display: flex;
-  flex-direction: column;
-}
-.checkout > * {
-  flex: 1;
+  color: var(--color-header__footer);
 }
