--- a/css/offpist.css
+++ b/css/offpist.css
@@ -12,7 +12,7 @@
   flex: 1;
 }
 .product-image_thumbnails {
-  flex-direction: row;
+  justify-content: space-between;
   gap: 10px;
   margin-top: 5px;
 }
