--- a/css/media.css
+++ b/css/media.css
@@ -88,7 +88,7 @@
     top: 24.5%;
   }
   .about {
-    background-position: center;
+    background-position: bottom;
   }
   .contact {
     display: flex;
