--- a/css/styles.css
+++ b/css/styles.css
@@ -90,7 +90,8 @@ header {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  top: 5px;
+  top: -20px;
+  width: 110px;
 }
 nav {
   display: none;
