--- a/css/imports/typography.css
+++ b/css/imports/typography.css
@@ -1,10 +1,17 @@
 .logo {
   font-family: Roboto, Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 2.5em;
+  font-size: 2em;
 }
 h1,
-h2 {
+h2,
+nav a,
+.cta {
   font-family: var(--font-heading), "Times New Roman", Times, serif;
-  font-size: 1.1 em;
-  text-transform: capitalize;
+  font-size: 1.2em;
+  font-weight: lighter;
+}
+
+p {
+  font-family: var(--font-paragraph), Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 0.75em;
 }
