--- a/css/imports/variables.css
+++ b/css/imports/variables.css
@@ -1,8 +1,11 @@
 :root {
   --font-heading: "Source sans pro";
-  --font-paragraph: "Open-Sans";
+  --font-paragraph: "Open Sans";
   --font-logo: "Roboto";
   --color-header__footer: #355881;
+  --secondary-color: #fff;
+  --tertiary-color: #000;
+  --quaternary-color: #394271;
 }
 
 @font-face {
