--- a/css/index.css
+++ b/css/index.css
@@ -4,35 +4,38 @@
   background-size: cover;
   min-height: 40vh;
 }
-
-.intro__content {
-  position: absolute;
-  text-align: center;
-  max-width: 60%;
-  left: 35%;
-  top: 20px;
+.intro_content > * {
   margin: 10px;
 }
-.logo-intro {
-  color: var(--color-header__footer);
-}
-
-.intro h2 {
-  margin: 0px 0px 25px 0px;
-  color: #211d99;
+.intro h1 {
+  color: var(--secondary-color);
   font-size: 1.2em;
-  font-weight: bold;
-  text-transform: none;
+  font-weight: lighter;
+  margin-bottom: 20px;
 }
 
+.featured,
 .waterproof {
+  text-align: center;
+}
+.featured-product {
+  max-width: 300px;
+}
+.waterproof_container {
   display: flex;
   flex-direction: column;
   text-align: center;
 }
+
+.waterproof-text {
+  max-width: 300px;
+}
+.waterproof-text > * {
+  margin: 20px;
+}
 .waterproof h2 {
   order: 1;
-  text-decoration: underline;
+  font-weight: bold;
 }
 
 .waterproof__img {
@@ -43,6 +46,7 @@
 .waterproof p {
   order: 3;
   text-align: left;
+  margin-bottom: 40px;
 }
 .waterproof a {
   order: 4;
