finished home page design changes

--- a/css/imports/typography.css
+++ b/css/imports/typography.css
@@ -9,6 +9,7 @@ nav a,
   font-family: var(--font-heading), "Times New Roman", Times, serif;
   font-size: 1.2em;
   font-weight: lighter;
+  text-transform: capitalize;
 }
 
 p {
