--- a/css/media.css
+++ b/css/media.css
@@ -1,6 +1,20 @@
-@media (min-width: 400px) {
+@media (min-width: 600px) {
+  p {
+    font-size: 0.85em;
+  }
+
+  /* homepage */
+  .home-featured {
+    margin: 30px 0px;
+    display: flex;
+    justify-content: space-around;
+    max-width: 1400px;
+  }
+  .waterproof {
+    margin-top: 50px;
+  }
   .featured p {
-    font-size: 1.2em;
+    font-size: 1em;
   }
   .form__checkout {
     top: -25em;
@@ -13,8 +27,55 @@
     font-weight: normal;
   }
 
-  p {
-    font-size: 0.85em;
+  /* header  */
+  header {
+    position: static;
+  }
+
+  .header-bottom {
+    position: relative;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    padding: 13px;
+  }
+
+  .shopping-cart i {
+    color: var(--color-header__footer);
+    position: relative;
+    bottom: 3px;
+  }
+  .logo-header {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  nav {
+    display: block;
+    position: static;
+    border-bottom: none;
+    background: none;
+  }
+  nav a {
+    display: inline;
+    padding: 15px;
+    border-top: none;
+    color: var(--color-header__footer);
+  }
+  .social-media {
+    width: 200px;
+    position: static;
+    background: none;
+    transform: translateX(0);
+    justify-content: left;
+    color: var(--seconday-color);
+  }
+  .social-media i {
+    color: var(--seconday-color);
+  }
+  .shopping-cart {
+    right: 1em;
   }
 
   .hamburger-menu {
@@ -26,48 +87,16 @@
     min-width: 135px;
     text-align: center;
   }
+
+  /* home page */
   .intro {
+    margin-top: 0px;
     background-image: url(../../images/free-shipping-big.jpg);
     background-position-y: center;
     min-height: 60vh;
   }
-  .intro_content-container {
-    background-color: var(--quaternary-color);
-    width: 50%;
-    margin-left: auto;
-    min-height: 60vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
   .intro_content {
     max-width: 300px;
-  }
-
-  .home-featured {
-    margin: 30px 0px;
-    display: flex;
-    justify-content: space-between;
-    max-width: 1400px;
-    align-items: center;
-  }
-  .featured {
-    margin: auto;
-  }
-  .waterproof_container {
-    flex-direction: row-reverse;
-    max-width: 800px;
-    align-items: center;
-    gap: 30px;
-    text-align: left;
-    padding: 30px 10px;
-    background: #0d324d;
-  }
-  .waterproof img {
-    height: 250px;
-    width: 300px;
-    margin-top: 20px;
   }
 
   .products {
@@ -132,41 +161,31 @@
     font-size: 1em;
   }
 }
-@media (min-width: 1200px) {
-  header {
-    position: static;
+@media (min-width: 1010px) {
+  /* home page    */
+  .featured {
+    margin: auto;
   }
-  .header-bottom {
-    position: relative;
+  .home-featured {
+    margin: 30px 0px;
     display: flex;
-    flex-direction: row-reverse;
-    justify-content: center;
-    padding: 13px;
-  }
-  header label {
-    display: none;
-  }
-  .shopping-cart {
-    color: var(--color-header__footer);
-    position: absolute;
-    right: 1%;
-  }
-  header i {
-    font-size: 1.3em;
-  }
-  .logo-header {
-    top: 5px;
+    justify-content: space-between;
+    max-width: 1400px;
+    align-items: center;
   }
 
-  nav {
-    display: block;
-    position: static;
-    border-bottom: none;
+  .waterproof_container {
+    flex-direction: row;
+    align-items: center;
+    max-width: 750px;
+    gap: 30px;
+    padding: 30px 10px;
   }
-  nav a {
-    display: inline;
-    padding: 15px;
-    border-top: none;
+  .waterproof img {
+    height: 250px;
+    width: 300px;
+    margin-top: 20px;
+    padding-left: 45px;
   }
 
   .products {
