--- a/css/collection.css
+++ b/css/collection.css
@@ -1,13 +1,6 @@
-main {
-  margin: 20px;
-}
-.collection {
-  max-width: 1400px;
-  margin: auto;
-}
 .collection__intro {
   max-width: 500px;
-  margin: 20px auto;
+  margin: 50px auto;
 }
 .collection__intro p,
 .collection h1 {
@@ -27,11 +20,19 @@ main {
   text-transform: uppercase;
   margin-bottom: 3px;
 }
-.products img {
-  height: 414px;
-}
+
 .products {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 20px;
+  gap: 100px;
+  max-width: max-content;
+  margin: 0 auto;
+}
+.products img {
+  max-height: 250px;
+  object-fit: fill;
+}
+
+footer {
+  margin-top: 50px;
 }
