--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,8 @@ nav a {
 /* product container  */
 .product-container {
   max-width: 250px;
+  box-shadow: 0px 3px 5px 2px rgba(34, 34, 34, 0.775);
+  padding: 10px;
 }
 .product-container > * {
   color: var(--tertiary-color);
@@ -128,11 +130,13 @@ nav a {
 .product-container_text {
   display: flex;
   justify-content: space-between;
+  color: var(--tertiary-color);
 }
 .product-container_text > * {
-  margin: 8px 0px;
+  margin: 12px 0px;
   font-weight: bold;
   font-size: 0.85em;
+  color: var(--tertiary-color);
 }
 .form {
   display: flex;
